# data-engineering

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/: variables.example.json
airflow/dags/: chicago_taxi_batch_pipeline.py
dashboard/: README.md  app.py
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/: schema.yml
dbt/models/marts/: mart_payment_type_daily.sql  mart_trips_daily.sql
dbt/models/staging/: stg_chicago_taxi_trips.sql
homework01/: README.md  db.sql  ingest.py  pyproject.toml
homework02/: home_work_postgres_taxi.yaml  homework_bulk_loader.yaml  tasks.sql
homework03/: homework.sql
homework04/: fct_monthly_zone_revenue.sql
homework04/models/staging/: stg_fhv_tripdata.sql
homework05/: .bruin.yml  pipeline.yml
homework05/assets/: ingest_yellow_taxi.sql
homework07/: ksqldb_streaming_study_notes.py
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: preview_queries.py
src/pipeline/: __init__.py  config.py  sql.py
tests/: test_sql.py
workshop1/: taxi_pipeline.py
